Fixed alignment and image opt

--- a/css/style.css
+++ b/css/style.css
@@ -228,6 +228,7 @@ header {
 }
 .writing-book {
   position: absolute;
+  z-index: 1;
   top: 345px;
   left: -200px;
   height: 380px;
@@ -249,6 +250,7 @@ header {
 }
 .post-it {
   position: absolute;
+  z-index: 1;
   top: 400px;
   right: 40px;
   height: 200px;
@@ -300,10 +302,13 @@ height: 100%;
   height: 100%;
   max-width: 580px;
   padding: 0;
-  margin: 10px auto 0px auto;
+  margin: 0px auto;
   transition: all 600ms ease;
 }
-.em-imac {
+.em-image-container {
+  position: relative;
+}
+/*.em-imac {
   position: relative;
   width: 130%;
   top: -75px;
@@ -314,12 +319,18 @@ height: 100%;
   width: 120%;
   right: 180px;
   top: 415px;
+}*/
+.em-apple-displays {
+  display: block;
+  width: 90%;
+  text-align: center;
+  margin: 75px auto -25px;
 }
 .squirrel-logo {
   position: absolute;
   height: 225px;
   width: 225px;
-  left: -60px;
+  left: 320px;
   top: 115px;
 }
 .video-player {
@@ -364,7 +375,8 @@ height: 100%;
                               MYRIAD  STYLES
 ===============================================*/
 .myriad {
-  height: 1000px;
+  height: 900px;
+  padding-top: 25px;
   background: url(http://dennisbrotzky.me/img/florian-myriad.jpg) no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -488,7 +500,7 @@ height: 100%;
 .codecore-macbook {
   position: absolute;
   width: 700px;
-  top: 319px;
+  top: 343px;
   right: 55px;
 }
 /*===============================================
@@ -2614,6 +2626,9 @@ footer {
       left: 0px;
       height: 90px;
     }
+    .squirrel-logo {
+      display: none;
+    }
   }
 /*===============================================
                               1024 STYLES iPad, Tablets, etc
@@ -2622,7 +2637,7 @@ footer {
   .codecore-macbook {
     position: absolute;
     width: 700px;
-    top: 319px;
+    top: 343px;
     right: -78px;
     }
 }
@@ -2720,28 +2735,17 @@ footer {
       left: -140px;
       height: 90px;
     }
-    .squirrel-logo {
-      position: relative;
-      display: block;
-      margin: 0 auto;
-      top: 20px;
-      left: 0;
-    }
-    .em-imac {
-      position: relative;
-      width: 130%;
-      top: -20px;
-      right: -90px;
-    }
-    .em-macbook {
-      position: relative;
-      width: 125%;
-      right: 185px;
-      top: -320px;
+    .em-apple-displays {
+      width: 98%;
+      margin: 70px auto -35px;
     }
     .block-emcollective {
-      height: 700px;
-      top: -285px;
+      height: auto;
+      top: 20px;
+    }
+    .block-emcollective-images {
+      height: 100%;
+      padding: 20px 0px 70px;
     }
     /*
       ______________ NEW MCGILL BACKGROUND < 720 ______________
@@ -2809,8 +2813,8 @@ footer {
       top: -350px;
     }
     .block-emcollective {
-      height: 650px;
-      top: -330px;
+      height: auto;
+      top: 20px
     }
 
 }
@@ -2822,7 +2826,7 @@ footer {
     float: none;
   }
    .block-emcollective {
-      height: 900px;
+      height: auto;
     }
 }
 /*===============================================
@@ -2842,12 +2846,6 @@ footer {
     .em-macbook {
       top: -250px;
     }
-    .block-emcollective {
-      top: -240px;
-    }
-    .block-emcollective {
-      height: 1000px;
-    }
   }
   /*===============================================
                               455 STYLES
@@ -2863,9 +2861,7 @@ footer {
       height: 180px;
       right: -20px;
     }
-     .block-emcollective {
-      height: 1200px;
-    }
+
     .dennis-brotzky-forms {
       top: -60px;
     }
@@ -2908,9 +2904,7 @@ footer {
     .post-it {
       top: 810px;
     }
-    .block-emcollective {
-      height: 1200px;
-    }
+
     .codecore-macbook{
       width: 425px;
       right: -165px;
@@ -2935,16 +2929,14 @@ footer {
       height: 180px;
       right: -20px;
     }
-    .block-emcollective {
-      height: 1280px;
-    }
+
     .em-macbook {
       width: 129%;
       top: -240px;
       right: 145px;
     }
     .emcollective {
-      margin: 25px auto 10px;
+      margin: -10px auto 10px;
     }
     .codecore-mac {
       width: 152%;
@@ -2955,5 +2947,9 @@ footer {
       width: 380px;
       top: 183px;
       right: -128px;
+    }
+    .em-apple-displays {
+      width: 98%;
+      margin: 70px auto 0;
     }
 }
